<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/description" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="50dp" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="switch1"
        android:text="@string/switch1" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="switch2"
        android:text="@string/switch2" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="switch3"
        android:text="@string/switch3" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <Switch
        android:id="@+id/switch4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="switch4"
        android:text="@string/switch4" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <Switch
        android:id="@+id/switch5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="switch5"
        android:text="@string/switch5" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <Switch
        android:id="@+id/switch6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="switch6"
        android:text="@string/switch6" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <Switch
        android:id="@+id/switch7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="switch7"
        android:text="@string/switch7" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="100dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="settings"
        android:text="@string/ip_set" />

</LinearLayout>

